# axum-tracing-opentelemetry

./: Cargo.toml  README.md
examples/otlp/: Cargo.toml
examples/otlp/src/: main.rs
src/middleware/: response_injector.rs  trace_extractor.rs
src/middleware/snapshots/: axum_tracing_opentelemetry__middleware__trace_extractor__tests__empty_http_route_for_nonexisting_route.snap.new
src/tools/: mod.rs  otlp.rs  resource.rs  stdio.rs  tracing_subscriber_ext.rs
