[package]
name = "axum-tracing-opentelemetry"
description = "Middlewares and tools to integrate axum + tracing + opentelemetry"
version = "0.10.0"
edition = "2021"
readme = "README.md"
license = "CC0-1.0"
keywords = ["axum", "tracing", "opentelemetry"]
categories = ["web-programming"]
repository = "https://github.com/davidB/axum-tracing-opentelemetry"
homepage = "https://github.com/davidB/axum-tracing-opentelemetry"

[dependencies]
# opentelemetry_otlp->tonic depends on axum 0.7
pin-axum = { package = "axum", version = "0.5" }
pin-http = { package = "http", version = "0.2.12" }
pin-tower = { package = "tower", version = "0.4.13" }
pin-tower-http = { package = "tower-http", version = "0.3.5", features = ["trace"] }

futures = "0.3"
opentelemetry = { version = "0.25" }
opentelemetry_sdk = { version = "0.25", features = ["rt-tokio"] }
opentelemetry-aws = { version = "0.13", optional = true }
opentelemetry-otlp = { version = "0.25", optional = true, features = [
  "http-proto",
] }
opentelemetry-semantic-conventions = { version = "0.25", optional = true }
opentelemetry-stdout = { version = "0.25", optional = true }
opentelemetry-zipkin = { version = "0.25", features = [], optional = true }
tracing = "0.1"
tracing-opentelemetry = "0.26"
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "ansi",
  "env-filter",
  "fmt",
  "json",
], optional = true }

[dev-dependencies]
assert2 = "0.3"
hyper = "0.14"
insta = { version = "1.29.0", features = ["yaml", "redactions"] }
opentelemetry-otlp = { version = "0.25", features = [
  "http-proto",
  "reqwest-client",
  "reqwest-rustls",
] }
rstest = "0.17"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.17", features = ["full"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "env-filter",
  "fmt",
  "json",
] }

[features]
otlp = ["dep:opentelemetry-otlp", "tracer"]
tracer = ["dep:opentelemetry-semantic-conventions", "dep:opentelemetry-stdout"]
xray = ["dep:opentelemetry-aws"]
zipkin = ["dep:opentelemetry-zipkin"]
tracing_subscriber_ext = ["dep:tracing-subscriber", "otlp"]

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3

[package.metadata.release]
pre-release-commit-message = ":rocket: (cargo-release) version {{version}}"
tag-prefix = ""
tag-name = "{{prefix}}{{version}}"
tag-message = ":bookmark: {{version}}"
